# phaseField_fatigue

./: .gitignore  README.md  ROADMAP.md  agents.md  launch.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.html  index.rst  installation.rst  usage.rst
docs/site/: batch.html  index.html  installation.html  numerical.html  theory.html  usage.html
docs/site/css/: style.css
meshes/: ct_specimen.msh
scratch/: verify_diffusion.py  verify_sif.py
src/: config.py  main.py
src/data/: materials.yaml
src/engine/: batch_manager.py  diffusion.py  energy_lib.py  export.py  fatigue.py  lefm_library.py  mesh_gen.py  post_processing.py  solver.py  solver.py.bak
src/gui/: main_frame.py  panels.py
src/utils/: export.py  measurement.py
test_meshes/: cct_specimen.msh  ct_specimen.msh  senb_specimen.msh  test_export.h5  test_export.xdmf  test_rect.msh
tests/: __init__.py  test_engine_numerical.py  test_gui_init.py
