[project]
name = "phasefield-fatigue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "gmsh>=4.15.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "wxpython>=4.2.5",
]
